force-app/main/default/objects/Customer_Meeting_Contact__c/Customer_Meeting_Contact__c.object-meta.xml
<CustomObject>
    <label>Customer Meeting Representative</label>
    <nameField>
        <displayFormat>Con-{00000}</displayFormat>
        <label>Customer Meeting Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Meeting Representatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>