force-app/main/default/objects/Customer_Meeting_Contact__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Contact__r.Title  &amp; &#39; &#39; &amp; Contact__r.FirstName  &amp; &#39; &#39; &amp;  Contact__r.MiddleName  &amp; &#39; &#39; &amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>